--- a/client/src/components/transfer-page/Modal.css
+++ b/client/src/components/transfer-page/Modal.css
@@ -20,10 +20,10 @@
     width: 276px;
     position: fixed;
     top: 60%;
-    left: 12%;
+    left: 50%;
     transform: translate(-50%, -50%);
     display: flex;
-    background: linear-gradient(227.99deg, #49224b -5.73%, #2c2070 86.41%);
+    background: #2E4A40;
     box-shadow: 0px 0px 18px 0px rgba(0, 0, 0, 0.75);
     border-radius: 25px;
 
@@ -44,6 +44,7 @@
     top: 76.43%;
     bottom: 6.79%;
 
+    border: 1px solid #479E7F;
     background: #2E4A40;
     border-radius: 15px;
 }
