--- a/client/src/components/transfer-page/Transferpage.css
+++ b/client/src/components/transfer-page/Transferpage.css
@@ -29,133 +29,20 @@
     background: #F8F8F8;
 }
 
-.header {
+.header_name {
     position: absolute;
-    width: 114px;
-    height: 24px;
-    left: 148px;
-    top: 24px;
+    width: 271px;
+    height: 54px;
+    left: 162px;
+    top: 65px;
 
     font-family: 'Poppins';
     font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 24px;
-    /* identical to box height */
-
-
-    color: #FFFFFF;
-}
-
-.sub-header {
-    position: absolute;
-    width: 83px;
-    height: 30px;
-    left: 165px;
-    top: 67px;
-
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 500;
+    font-weight: 700;
     font-size: 20px;
     line-height: 30px;
-    /* identical to box height */
-
 
     color: #FFFFFF;
-}
-
-.account-box {
-    position: absolute;
-    width: 323px;
-    height: 124px;
-    left: 41px;
-    top: 117px;
-
-    background: #D9D9D9;
-    border-radius: 25px;
-}
-
-.account-logo {
-    position: absolute;
-    width: 63px;
-    height: 63px;
-    left: 46px;
-    top: 126px;
-    border-radius: 50%;
-    background: #3A6B59;
-}
-
-.account-box_text {
-    position: absolute;
-    width: 97px;
-    height: 30px;
-    left: 125px;
-    top: 146px;
-
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 30px;
-    /* identical to box height */
-
-
-    color: #000000;
-}
-
-.account-address_text {
-    position: absolute;
-    width: 107px;
-    height: 21px;
-    left: 125px;
-    top: 179px;
-    border: none;
-    background: transparent;
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 300;
-    font-size: 14px;
-    line-height: 21px;
-    /* identical to box height */
-
-
-    color: #000000;
-}
-
-.account-address-balance_text {
-    position: absolute;
-    width: 75px;
-    height: 27px;
-    left: 279px;
-    top: 148px;
-
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 18px;
-    line-height: 27px;
-    /* identical to box height */
-
-
-    color: #000000;
-}
-
-
-.account-balance_text {
-    position: absolute;
-    width: 71px;
-    height: 27px;
-    left: 279px;
-    top: 175px;
-    border: none;
-    background: transparent;
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 300;
-    font-size: 18px;
-    line-height: 27px;
-    /* identical to box height */
 }
 
 .transfer-box {
@@ -171,188 +58,113 @@
 
 .recipient-box {
     position: absolute;
-    width: 323px;
-    height: 126px;
-    left: 41px;
-    top: 427px;
+    width: 1112px;
+    height: 165px;
+    top: 725px;
+    left: 50%;
+    transform: translate(-50%, -50%);
 
     background: #D9D9D9;
     border-radius: 25px;
 }
 
-.swap-button {
+.input_address {
     position: absolute;
-    width: 323px;
-    height: 45px;
-    left: 41px;
-    top: 579px;
-    cursor: pointer;
-    background: #D9D9D9;
-    border-radius: 25px;
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 32px;
-    line-height: 48px;
-    /* identical to box height */
-    color: #000000;
-}
-
-.swap-button_text {
-    position: absolute;
-    width: 89px;
-    height: 48px;
-    left: 160px;
-    top: 578px;
-
-}
-
-.reset-button {
-    position: absolute;
-    width: 323px;
-    height: 45px;
-    left: 41px;
-    top: 649px;
-    cursor: pointer;
-    background: #D9D9D9;
-    border-radius: 25px;
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 32px;
-    line-height: 48px;
-    /* identical to box height */
-
-    cursor: pointer;
-    color: #000000;
-
-}
-
-.reset-button_text {
-    position: absolute;
-    width: 88px;
-    height: 48px;
-    left: 157px;
-    top: 648px;
-
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 32px;
-    line-height: 48px;
-    /* identical to box height */
-
-    cursor: pointer;
-    color: #000000;
-}
-
-.amount-input {
-    position: absolute;
-    width: 200px;
-    height: 50px;
-    left: 150px;
-    top: 315px;
-
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 48px;
-    line-height: 72px;
-    /* identical to box height */
+    width: 385px;
+    height: 79px;
+    left: 55px;
+    top: 86px;
     border: none;
+    outline: 0ch;
     background: transparent;
-    text-align: end;
-
-
-    color: #000000;
-}
-
-.amount-text {
-    position: absolute;
-    width: 73px;
-    height: 27px;
-    left: 264px;
-    top: 290px;
 
     font-family: 'Poppins';
     font-style: normal;
-    font-weight: 500;
-    font-size: 18px;
-    line-height: 27px;
-    /* identical to box height */
-
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 60px;
 
     color: #000000;
 }
 
-.transfer-text {
+.to-Text {
     position: absolute;
     width: 75px;
-    height: 27px;
-    left: 53px;
-    top: 296px;
+    height: 35px;
+    left: 55px;
+    top: 15px;
 
     font-family: 'Poppins';
     font-style: normal;
-    font-weight: 500;
-    font-size: 18px;
-    line-height: 27px;
-    /* identical to box height */
-
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 54px;
 
     color: #000000;
 }
 
-.Ksh-text {
-    position: absolute;
-    width: 78px;
-    height: 60px;
-    left: 51px;
-    top: 321px;
+@media screen and (max-width: 992px) {
+    .recipient-box {
+        position: absolute;
+        width: 450px;
+        height: 124px;
+        top: 558px;
+        left: 50%;
+        transform: translate(-50%, -50%);
 
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 40px;
-    line-height: 60px;
-    /* identical to box height */
+        background: #D9D9D9;
+        border-radius: 25px;
+    }
 
+    .to-Text {
+        position: absolute;
+        width: 22px;
+        height: 27px;
+        left: 12px;
+        top: 15px;
 
-    color: #000000;
-}
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 500;
+        font-size: 18px;
+        line-height: 27px;
 
-.receiver-text {
-    position: absolute;
-    width: 22px;
-    height: 27px;
-    left: 53px;
-    top: 442px;
+        color: #000000;
+    }
 
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 18px;
-    line-height: 27px;
-    /* identical to box height */
+    .input_address {
+        position: absolute;
+        width: 385px;
+        height: 79px;
+        left: 12px;
+        top: 50px;
+        border: none;
+        outline: 0ch;
+        background: transparent;
 
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 300;
+        font-size: 25px;
+        line-height: 27px;
 
-    color: #000000;
-}
+        color: #000000;
+    }
 
-.address-text {
-    position: absolute;
-    width: 300px;
-    height: 24px;
-    left: 53px;
-    top: 490px;
+    .header_name {
+        position: absolute;
+        width: 271px;
+        height: 54px;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        top: 65px;
 
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 300;
-    font-size: 16px;
-    line-height: 24px;
-    /* identical to box height */
-    background: transparent;
-    border: none;
-    color: #000000;
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 20px;
+        line-height: 30px;
+
+        color: #FFFFFF;
+    }
 }
