--- a/client/src/components/login/login.css
+++ b/client/src/components/login/login.css
@@ -96,6 +96,55 @@
     top: 130px;
 }
 
+.reg {
+    position: absolute;
+    width: 320px;
+    height: 55px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    top: 540px;
+}
+
+.reg-text {
+    position: absolute;
+    width: max-content;
+    height: 55px;
+    left: 1px;
+    top: 10px;
+
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+
+    color: #FFFFFF;
+}
+
+.reg-btn {
+    position: absolute;
+    width: 100px;
+    height: 44px;
+    right: 20px;
+    top: 0px;
+
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+    border-radius: 45%;
+    cursor: pointer;
+    border: none;
+    background: transparent;
+    color: blue;
+
+}
+
+.reg-btn:hover {
+    font-size: large;
+}
+
 @media screen and (max-width: 992px) {
     .bg-image {
         display: none;
