--- a/client/src/components/Register-page/register.css
+++ b/client/src/components/Register-page/register.css
@@ -90,7 +90,7 @@
 .button-container {
     position: absolute;
     width: 300px;
-    height: 40px;
+    height: 60px;
     left: 50%;
     transform: translate(-50%, -50%);
     top: 580px;
@@ -104,7 +104,6 @@
     height: 40px;
     right: 1px;
     top: 1px;
-
     background: linear-gradient(264.12deg, #D3FFEF 1.87%, #7EE0BD 60.67%);
     box-shadow: 0px 4px 4px 2px #1B2723;
     border-radius: 25px;
@@ -115,7 +114,6 @@
     height: 50px;
     left: 10px;
     top: 3px;
-
     font-family: 'Poppins';
     font-style: normal;
     font-weight: 700;
@@ -130,9 +128,8 @@
     position: absolute;
     width: 250px;
     height: 55px;
-    left: 82px;
-    top: 610px;
-
+    left: 10px;
+    top: 15px;
     font-family: 'Poppins';
     font-style: normal;
     font-weight: 500;
@@ -146,8 +143,8 @@
     position: absolute;
     width: 100px;
     height: 55px;
-    left: 294px;
-    top: 590px;
+    right: 10px;
+    top: 1px;
 
     font-family: 'Poppins';
     font-style: normal;
@@ -158,16 +155,16 @@
     border: none;
     background: transparent;
     color: blue;
-    line-height: 24px;
 }
 
 .lg-container {
     position: absolute;
     width: 320px;
     height: 55px;
-    left: 30%;
+    left: 50%;
     transform: translate(-50%, -50%);
-    top: 40px;
+    top: 630px;
+    background: transparent;
 }
 
 .log-btn:hover {
