--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,12 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,400&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 
-body {
-  background: #8FE7C7;
 
+body {
+  background: #7EE0BD;
+  overflow: hidden;
 }
 
-.container- {
+section {
+  height: 100vh;
+}
+
+.container-B {
   position: absolute;
   width: 500px;
   height: 100vh;
@@ -17,12 +22,13 @@ body {
 .container-D {
   position: absolute;
   width: 100vw;
-  height: 100vh;
+  height: 100%;
   background: #479E7F;
-  align-content: center;
 }
 
 @media screen and (max-width: 992px) {
+
+
   .container-D {
     position: absolute;
     width: 100vw;
