--- a/client/src/components/Swap-page/swappage.css
+++ b/client/src/components/Swap-page/swappage.css
@@ -302,14 +302,14 @@
 
 .swap_button {
     position: absolute;
-    width: 1112px;
+    width: 500px;
     height: 45px;
     left: 404px;
     top: 860px;
     left: 50%;
     transform: translate(-50%, -50%);
 
-    background: #D9D9D9;
+    background: #188302;
     border-radius: 25px;
     cursor: pointer;
     font-family: 'Poppins';
