--- a/client/src/components/navbar/nav.css
+++ b/client/src/components/navbar/nav.css
@@ -48,7 +48,7 @@ nav {
     font-weight: 500;
     font-size: 20px;
     line-height: 30px;
-    color: #FFFFFF;
+    color: #188302;
     border: none;
     background: transparent;
 }
@@ -64,7 +64,7 @@ nav {
     font-weight: 500;
     font-size: 20px;
     line-height: 30px;
-    color: #FFFFFF;
+    color: #188302;
     border: none;
     background: transparent;
 }
@@ -80,7 +80,7 @@ nav {
     font-weight: 500;
     font-size: 20px;
     line-height: 30px;
-    color: #FFFFFF;
+    color: #b11a07;
     border: none;
     background: transparent;
 }
